# dmerge-eurosys24-ae

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  makefile
.gitlab/issue_templates/: feature.md
ae_scripts/: bootstrap.py  clean-img.toml  full-connect.toml  insmod.toml  recover-device.toml  requirements.txt  rmmod.toml  sync-km.sh
dmerge/: Cargo.toml  Kbuild  build.rs
dmerge-kms/: .gitignore
dmerge-kms/heap/: Cargo.toml  build.rs
dmerge-kms/heap/src/: lib.rs
dmerge-kms/heap/tests/: test.rs
dmerge-user-libs/include/: common.h  syscall.h
dmerge/src/: bindings.rs  core_syscall_handler.rs  id_generator.rs  lib.rs  rpc_service.rs  shadow_heap.rs  startup.rs
dmerge/src/descriptors/: heap.rs  mod.rs
dmerge/src/native/: kernel_helper.c  kernel_helper.h
dmerge/src/network/: mod.rs
dmerge/src/shadow_heap/: heap.rs  mod.rs  vma.rs
dmerge/unitests/: .gitignore  Makefile
dmerge/unitests/mem_op/: Cargo.toml
dmerge/unitests/mem_op/src/: lib.rs
dmerge/unitests/mem_op/tests/: test.rs
dmerge/unitests/shadow_heap/: Cargo.toml
dmerge/unitests/shadow_heap/src/: lib.rs  my_syscalls.rs
dmerge/unitests/shadow_heap/tests/: test.rs
dockerfiles/: Dockerfile-dmerge
docs/: exp.md
exp/: Pits-and-Falls.md  auto_tester.py  log_analyser.py  makefile  peak-mem.sh
exp/archive/ml-pipeline/: service.yaml  util.py
exp/archive/p2p/: functions.py  map-reduce.yaml
exp/archive/video-filter/: full-flow.py  requirements.txt  util.py
exp/common/: Prometheus.yaml  device-plugin.yaml  meta.yaml  metric-server.yaml  minio.yaml  redis.yaml
exp/digital-minist/: Dockerfile  app.py  demo.py  functions.py  mnist_model.txt  mnist_trainer.py  requirements.txt  service.yaml  util.py
exp/digital-minist/services/dmerge/: service.yaml
exp/digital-minist/services/es/: service.yaml
exp/digital-minist/services/rpc/: service.yaml
exp/finra/: app.py  data_fetcher.py  full-flow.py  functions.py  requirements.txt  service.yaml  util.py  whole_data.npy
exp/finra/services/dmerge/: service.yaml
exp/finra/services/es/: service.yaml
exp/finra/services/rpc/: service.yaml
exp/micro/: .dockerignore  app.py  functions.py  sample.py  sd_bench.py  sd_bench_vary_sz.py  service.yaml  torch_resnet_gen.py  util.py
exp/micro/arrow/: arrow_bench.py  arrow_flight_server.py  demo.py
exp/micro/data/: yfinance.csv
exp/micro/pull_bench/: function.py  makefile  merge.py  util.py
exp/micro/services/dmerge/: service.yaml
exp/micro/services/es/: service.yaml
exp/micro/services/rpc/: service.yaml
exp/ml-pipeline/: Dockerfile  app.py  demo.py  docker-compose.yaml  functions.py  requirements.txt  service-demo.yaml  service.yaml  util.py
exp/ml-pipeline/services/dmerge/: service.yaml
exp/ml-pipeline/services/es/: service.yaml
exp/ml-pipeline/services/rpc/: service.yaml
exp/p2p/: Dockerfile  Dockerfile-origin  app.py  demo.py  functions.py  makefile  map-reduce.yaml  meta.yaml  minio.yaml  redis.yaml  service.yaml
exp/test/: .dockerignore  app-fastapi.py  app.py  functions.py  service.yaml
exp/thpt/: .dockerignore  app.py  curl.py  dummy.yaml  functions.py  pod_num_peak.py  requirements.txt  service.yaml  util.py
exp/thpt/data/: mnist_net.pth
exp/thpt/trigger_go/: .gitignore  go.mod  runner.go
exp/wordcount/: app.py  full-flow.py  functions.py  requirements.txt  service.yaml  util.py
exp/wordcount-java/: .gitignore  pom.xml
exp/wordcount/datasets/AChristmasCarol_CharlesDickens/: AChristmasCarol_CharlesDickens_Dutch.txt  AChristmasCarol_CharlesDickens_English.txt  AChristmasCarol_CharlesDickens_Finnish.txt  AChristmasCarol_CharlesDickens_French.txt  AChristmasCarol_CharlesDickens_German.txt
pyx/: bindings.pyx  demo.py  makefile  setup.py
pyx/native/: wrapper.h
pyx/pyx-demo/: helloworld.pyx
samples-cpp/cpp/: common.hh  connector.cc  function.cc
samples-knative/: broker.yaml  parallel.yaml  seq.yaml  simple.yaml
samples-knative/install/: install_eventing.sh  install_serving.sh
samples-knative/python/: Dockerfile  Dockerfile-mapper  app-mapper.py  service.yaml
samples-knative/rust/helloworld-rust/: Cargo.toml  Dockerfile  build.rs  deployment.yaml  device-plugin.yaml  makefile  mr-flow.yaml  one-step-flow.yaml  sequence-flow.yaml  service.yaml  simple.yaml
samples-knative/rust/helloworld-rust/.cargo/: config
samples-knative/rust/helloworld-rust/src/: allocator.rs  handler.rs  main.rs  proto_parser.rs  sys_env.rs  util.rs
samples-knative/rust/helloworld-rust/src/native/: wrapper.c  wrapper.h
samples-knative/rust/helloworld-rust/src/protos/: example.proto
samples-knative/rust/helloworld-rust/src/service/: cloud_event.rs  data_flow.rs  dmerge_test.rs  mod.rs  payload.rs
samples-knative/rust/helloworld-rust/src/service/bench/: mod.rs
samples/cpp/: CMakeLists.txt  common.hh  connector.cc  function.cc  merge.cc
samples/cpp/cpp/: common.hh  connector.cc  full-connector.cc  function.cc  merge.cc  remote_register.cc
samples/cpp/include/: allocator.hh
samples/include/: allocator.hh
samples/knative/: parallel.yaml  seq.yaml  simple.yaml
samples/knative/dockerfiles/: Dockerfile-cpython-base  Dockerfile-cpython-build  Dockerfile-dmerge-base  README.md  makefile
samples/knative/install/: install_eventing.sh  install_serving.sh  kubeadm.sh  uninstall_eventing.sh  uninstall_serving.sh
samples/knative/python/: Dockerfile  Dockerfile-mapper
samples/linker-loader/: default_linker.ld  dlinker.ld  linker.ld  linker_test.c  makefile
samples/python/: .gitignore  README.md  bindings.pyx  demo.py  example.py  function.py  main.py  makefile  merge.py  native.py  test.cpp
samples/python/native/: wrapper.cc  wrapper.h
samples/python/pyx-demo/: intlist.pyx
samples/wasm/demo/cmake/: .gitignore  CMakeLists.txt  hello.cpp
samples/wasm/demo/python/: .gitignore  CMakeLists.txt  main.cpp  origin.py
samples/wasm/demo/python/pyapp/: Cargo.toml
samples/wasm/demo/python/pyapp/src/: main.rs
samples/workflow/mapreduce-cpp/: CMakeLists.txt  mapper.cc
samples/workflow/micro/: include.h  mapper.cc  reducer.cc
scripts/: .gitignore
(+101 files in other folders)
