[workspace]

[package]
name = "dmerge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mitosis"]
[dependencies]
mitosis = {path = "../deps/mitosis/mitosis", version="0.1.0", optional = true}


[profile.dev]
opt-level = 2
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true # Enable debug print in test by default
overflow-checks = true   # overflow-checks is currently not a bottleneck
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
shlex = "0.1"