[workspace]

[package]
name = "dmerge"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mitosis", "rust-kernel-linux-util"]
[dependencies]
mitosis = {path = "../deps/mitosis/mitosis", version="0.1.0", optional = true}
mitosis-macros = {path = "../deps/mitosis/mitosis-macros"}
rust-kernel-linux-util = { path = "../deps/mitosis/deps/rust-kernel-rdma/rust-kernel-linux-util", optional = true, features = ["static_log_check", "max_level_trace"] }


[profile.dev]
opt-level = 2
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true # Enable debug print in test by default
overflow-checks = true   # overflow-checks is currently not a bottleneck
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
shlex = "0.1"