[workspace]

[package]
name = "heap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
test = false

[features]
default = ["dmerge", "krdma-test"]

[dependencies]
krdma-test = { path = "../../deps/mitosis/deps/rust-kernel-rdma/krdma-test", optional = true }
mitosis-macros = { path = "../../deps/mitosis/mitosis-macros" }
dmerge = { path = "../../dmerge", version = "0.1.0", optional = true }
bitflags = "1"
hashbrown = { features = ["raw"], path = "../../deps/mitosis/deps/hashbrown" }
x86_64 = { }
cfg-if = "0.1"
static_assertions = "1.1.0"

[dev-dependencies]
mitosis-rust-client = { path = "../../deps/mitosis/mitosis-user-libs/mitosis-rust-client" }
kernel-module-testlib = { path = "../../deps/mitosis/deps/rust-kernel-rdma/testlib" }

[profile.dev]
opt-level = 2
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true # Enable debug print in test by default
overflow-checks = true   # overflow-checks is currently not a bottleneck
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[build-dependencies]
bindgen = "0.54"
cc = "1.0"
shlex = "0.1"