[package]
name = "hellorust"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
#cloudevents-sdk = "0.5.0"
#cloudevents-sdk-actix-web = "0.3.1"
#cloudevents-sdk-reqwest = "0.3.1"
#reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls"] }
actix-web = "4.1.0"
#actix-rt = "2.7.0"
#serde_json = "^1.0"
#url = "^2.1"
#log = "0.4.0"
#env_logger = "0.9.0"