[package]
name = "hellorust"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies]
cloudevents-sdk = { version = "0.5.0", features = ["actix", "reqwest"] }
actix-web = "4"
actix-cors = "0.6.0-beta.8"
serde_json = "^1.0"
url = { version = "^2.1" }
env_logger = "0.9.0"
reqwest = { version = "0.11.11", default-features = false, features = ["rustls-tls", "blocking", "json"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.21.0", features = ["full"] }
serde = "1.0.144"
futures = "0.3.23"
async-std = { version = "1", features = ["attributes", "tokio1"] }
qstring = "0.7.2"